--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,11 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: configure
-      run: ./configure
+    - name: Install Dependencies
+      run: sudo apt-get install -y build-essential cmake libcmocka-dev sqlite3 libsqlite3-dev
     - name: Build
       run: make
     - name: Run Tests
-      run: make check
-    - name: Distribution Check
-      run: make distcheck
+      run: make test
