--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Install Dependencies
       run: sudo apt-get install -y build-essential cmake libcmocka-dev sqlite3 libsqlite3-dev
+    - name: Clean Project
+      run: make clean
     - name: Build
       run: make
     - name: Run Tests
